SingularityUI/app/styles/table.styl
@import colors

.table tbody tr:hover td, .table tbody tr:hover th
    background-color rgba(0, 0, 0, .05)

.table
    background #f9f9f9

.table

    td > span
        white-space nowrap

.table, table, table[data-sortable]

    th, td

        // Regular links

        &.actions-column
            white-space nowrap
            text-align right

            a
                margin-left 10px

        // Link buttons

        &.actions-column
            padding-top 0
            padding-bottom 0
            padding-right 0
            font-size 0

            a
                position relative
                overflow hidden
                padding .6em
                display inline-block
                background transparent
                text-decoration none
                font-size 13px
                line-height 1.8em
                margin 0 0 -13px

                &:hover
                    color #fff
                    background $linkBlue
                    box-shadow 0 -1px $linkBlue
                    text-decoration none

                &[data-action="remove"]:hover
                    background $red
                    box-shadow 0 -1px $red

    tr:last-child td.actions-column a
        margin-bottom -8px

    .icon
        margin-right 10px

.empty-table-message
    text-align center
    border 3px dashed #e7e7e7
    padding 2.5em
    color #888
    font-size 1.3em
    font-weight 300
    letter-spacing .03em

    p:last-child
        margin-bottom 0

.results > section + section > .empty-table-message, .empty-table-message + .empty-table-message
    margin-top 0
    border-top 0

